# SmartHome

./: CMakeLists.txt  README.md  cbuild.sh  transfer.sh
inc/: DHT11.h  face.h  global.h  ini.h  input_dev.h  msg_queue.h  myOled.h  output_dev.h  recv_interface.h  smoke.h  socket.h  uartTool.h  voice_dev.h
ini/: output_dev.ini
src/: DHT11.c  face.c  input_dev.c  main.c  msg_queue.c  myOled.c  output_dev.c  recv_interface.c  smoke.c  socket.c  uartTool.c  voice_dev.c
tool/usr/include/: drcSerial.h  font.h  oled.h
tool/usr/lib/: libwiringPi.so.2.52  libwiringPiDev.so.2.52
tool/usr/lib/aarch64-linux-gnu/pkgconfig/: inih.pc
tool/usr/lib/pkgconfig/: INIReader.pc
